
0.9.7b Nov 06, 2003
 * removed --interactive option
 * download all pkgs before processing installs,upgrades, and removals in transaction
 * updated NLS template and en.po

0.9.7a Nov 05, 2003
 * added check for presence of pkg in trans before adding upgrade (during --install)
 * added check for presence of pkg in trans before adding remove (during --remove)
 * added example linuxpackages.net source lines for each slack version
 * added head_request function to return if the named file is the same as the remote file
 * updated is_excluded, to continue loop if regex compile fails
 * return dep failure if one of the deps is excluded
 * added is_excluded check before adding explicit package to upgrade (allowing name and
   version to be checked, instead of just the name during the initial upgrade check)
   This is useful for excluding versions that contain pre or beta with a regex in the
   exclude such as: [0-9\_\.\-]{1}pre[0-9\-\.\-]{1} or [0-9\_\.\-]{1}beta[0-9\-\.\-]{1}
 * changed default ftp user:pass to show slapt-get-user@software.jaos.org
 * added missing commands to uninstall make target

0.9.7 Nov 03, 2003
 * parse package require/dep from PACKAGES.TXT
 * show parsed require/dep data with --show
 * --list now shows pkg_name - pkg_vesion : pkg_description
 * get_newest_pkg now only takes 2 arguments, struct pkg_list and char pkg_name
 * resolves dependencies (recursively) and adds them to the transaction
   using lookup_pkg_dependencies and parse_dep_entry functions
 * make pkg now gzip's the manpage and strips the binary (thanks Jim)
 * added search_transaction function
 * exit on unknown command line switch instead of barking usage info
   and going on
 * added is_required_by function, so --remove pkg also prompts to remove
   packages (recursively) that require it
 * added get_exact_pkg function
 * EXCLUDE in slapt-getrc now supports POSIX and extended regex
   (see example.slapt-getrc or README/FAQ)