@@ -3,6 +3,8 @@
  * removed --interactive option
  * download all pkgs before processing installs,upgrades, and removals in transaction
  * updated NLS template and en.po
+ * updated MD5SUM regex
+ * give transaction report prompt for every dist-upgrade (even if no removes or upgrades)
 
 0.9.7a Nov 05, 2003
  * added check for presence of pkg in trans before adding upgrade (during --install)
